[gd_scene load_steps=10 format=3 uid="uid://c3secondlevel"]

[ext_resource type="Script" uid="uid://bacykkp6q5ts6" path="res://scenes/secondlevel.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://bqft3t3gtnyj5" path="res://assets/firstscene_fondo.png" id="2_fondo"]
[ext_resource type="Texture2D" uid="uid://ba0moopqmjf57" path="res://assets/retazo/retazo1A.png" id="3_retazo1a"]
[ext_resource type="Texture2D" uid="uid://dmj4q3owqxmgj" path="res://assets/retazo/retazo1B.png" id="4_retazo1b"]
[ext_resource type="Texture2D" uid="uid://cyl8aeduxb5b4" path="res://assets/retazo/retazo1C.png" id="5_retazo1c"]
[ext_resource type="Texture2D" uid="uid://d5mmuq0cs8ye" path="res://assets/retazo/retazo1D.png" id="6_retazo1d"]
[ext_resource type="Texture2D" uid="uid://y17cdr28mb43" path="res://assets/retazo/retazo2.png" id="7_retazo2"]
[ext_resource type="Texture2D" uid="uid://dmsow1571kpav" path="res://assets/retazo/retazo3.png" id="8_retazo3"]
[ext_resource type="Texture2D" uid="uid://d2gu6qde1aqe8" path="res://assets/retazo/retazo4.png" id="9_retazo4"]

[node name="SecondLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fondo")
expand_mode = 1
stretch_mode = 5

[node name="PuzzlePieces" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Retazo1A" type="TextureRect" parent="PuzzlePieces"]
layout_mode = 0
offset_left = 50.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 230.0
rotation = -0.087
texture = ExtResource("3_retazo1a")
expand_mode = 1
stretch_mode = 5

[node name="Retazo1B" type="TextureRect" parent="PuzzlePieces"]
layout_mode = 0
offset_left = 120.0
offset_top = 50.0
offset_right = 270.0
offset_bottom = 200.0
rotation = 0.14
texture = ExtResource("4_retazo1b")
expand_mode = 1
stretch_mode = 5

[node name="Retazo1C" type="TextureRect" parent="PuzzlePieces"]
layout_mode = 0
offset_left = 30.0
offset_top = 180.0
offset_right = 180.0
offset_bottom = 330.0
rotation = -0.052
texture = ExtResource("5_retazo1c")
expand_mode = 1
stretch_mode = 5

[node name="Retazo1D" type="TextureRect" parent="PuzzlePieces"]
layout_mode = 0
offset_left = 140.0
offset_top = 150.0
offset_right = 290.0
offset_bottom = 300.0
rotation = 0.105
texture = ExtResource("6_retazo1d")
expand_mode = 1
stretch_mode = 5

[node name="Retazo2" type="TextureRect" parent="PuzzlePieces"]
layout_mode = 0
offset_left = 60.0
offset_top = 280.0
offset_right = 210.0
offset_bottom = 430.0
rotation = -0.122
texture = ExtResource("7_retazo2")
expand_mode = 1
stretch_mode = 5

[node name="Retazo3" type="TextureRect" parent="PuzzlePieces"]
layout_mode = 0
offset_left = 160.0
offset_top = 260.0
offset_right = 310.0
offset_bottom = 410.0
rotation = 0.07
texture = ExtResource("8_retazo3")
expand_mode = 1
stretch_mode = 5

[node name="Retazo4" type="TextureRect" parent="PuzzlePieces"]
layout_mode = 0
offset_left = 90.0
offset_top = 380.0
offset_right = 240.0
offset_bottom = 530.0
rotation = -0.07
texture = ExtResource("9_retazo4")
expand_mode = 1
stretch_mode = 5
